Auto load unloaded messages on reconnect and typing wrap fix

--- a/static/styles/comm.css
+++ b/static/styles/comm.css
@@ -1638,6 +1638,7 @@ input:focus:-ms-input-placeholder {
         bottom: 2px;
         left: 10px;
         margin: 0;
+        white-space: nowrap;
     }
 
     .text {
